load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "subspace_proto",
    srcs = ["subspace.proto"],
    deps = [
        "@protobuf//:any_proto",
    ],
)

cc_proto_library(
    name = "subspace_cc_proto",
    deps = [":subspace_proto"],
)

