load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")

package(default_visibility = ["//visibility:public"])

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    build_script_env = {
        "PROTOC": "$(execpath @protobuf//:protoc)",
        "SUBSPACE_PROTO_FILE": "$(execpath //proto:subspace.proto)",
    },
    data = [
        "//proto:subspace.proto",
        "@protobuf//:protoc",
        "@protobuf//:well_known_type_protos",
    ],
    deps = all_crate_deps(build = True),
)

rust_library(
    name = "subspace_client_rust",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "subspace_client",
    aliases = aliases(),
    deps = all_crate_deps(normal = True) + [
        ":build_script",
    ],
)

cc_library(
    name = "cross_lang_ffi",
    srcs = ["cross_lang_ffi.cc"],
    hdrs = ["cross_lang_ffi.h"],
    deps = [
        "//client:subspace_client",
    ],
)

rust_test(
    name = "client_test",
    srcs = ["tests/client_test.rs"],
    rustc_flags = ["--cfg=server_ffi"],
    env = {"RUST_TEST_THREADS": "1"},
    deps = [
        ":subspace_client_rust",
        ":cross_lang_ffi",
        "//server:server_ffi",
    ] + all_crate_deps(normal = True),
)

rust_test(
    name = "syscall_failure_test",
    srcs = ["tests/syscall_failure_test.rs"],
    rustc_flags = ["--cfg=server_ffi"],
    env = {"RUST_TEST_THREADS": "1"},
    deps = [
        ":subspace_client_rust",
        "//server:server_ffi",
    ] + all_crate_deps(normal = True),
)

rust_test(
    name = "latency_test",
    srcs = ["tests/latency_test.rs"],
    rustc_flags = ["--cfg=server_ffi"],
    env = {"RUST_TEST_THREADS": "1"},
    size = "large",
    timeout = "long",
    tags = ["manual"],
    deps = [
        ":subspace_client_rust",
        "//server:server_ffi",
    ] + all_crate_deps(normal = True),
)
