[package]
name = "subspace-rpc"
version = "0.1.0"
edition = "2021"
description = "Async RPC library for Subspace IPC"
license = "Proprietary"

[dependencies]
subspace-client = { path = "../rust_client" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util", "net", "time", "sync"] }
prost = "0.13"
prost-types = "0.13"
thiserror = "2"
log = "0.4"
async-trait = "0.1"
libc = "0.2"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util", "net", "time", "sync", "process"] }
env_logger = "0.11"
libc = "0.2"
async-trait = "0.1"
nix = { version = "0.29", features = ["fs"] }
