package(default_visibility = ["//visibility:public"])

cc_library(
    name = "server",
    srcs = [
        "server.cc",
        "client_handler.cc",
        "server_channel.cc",
    ],
    hdrs = [
        "server.h",
        "client_handler.h",
        "server_channel.h",
    ],
    deps = [
        "//common:subspace_common",
        "//client:subspace_client",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@coroutines//:co",
    ],
)

cc_binary(
    name = "subspace_server",
    srcs = [
        "main.cc",
    ],
    deps = [
      ":server",
      "@coroutines//:co",
    ],
    linkopts = [
        "-lrt"
    ],
)
