package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

cc_library(
    name = "server",
    srcs = [
        "server.cc",
        "client_handler.cc",
        "server_channel.cc",
    ],
    hdrs = [
        "server.h",
        "client_handler.h",
        "server_channel.h",
        "plugin.h",
    ],
    deps = [
        "//common:subspace_common",
        "//client:subspace_client",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@coroutines//co:co",
    ],
)

cc_binary(
    name = "subspace_server",
    srcs = [
        "main.cc",
    ],
    deps = [
      ":server",
      "@coroutines//co:co",
    ],
    linkopts = select({
        "//:macos_x86_64": [],
        "//:macos_arm64": [],
        "//:macos_default": [],
        "//conditions:default": [ "-lrt" ],
    }),
)
