package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "rpc_client",
    srcs = [
        "rpc_client.cc",
    ],
    hdrs = [
        "rpc_client.h",
    ],
    deps = [
        "//asio_rpc/common:async_wait",
        "//asio_rpc/server:rpc_server",
        "//client:subspace_client",
        "//common:subspace_common",
        "//proto:subspace_cc_proto",
        "//rpc/common:rpc_common",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:str_format",
        "@boost.asio//:boost.asio",
        "@boost.coroutine//:boost.coroutine",
    ],
)

cc_test(
    name = "client_test",
    srcs = ["client_test.cc"],
    deps = [
        ":rpc_client",
        "//asio_rpc/server:rpc_server",
        "//client:test_fixture",
        "//rpc/proto:rpc_test_cc_proto",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@boost.asio//:boost.asio",
        "@boost.coroutine//:boost.coroutine",
        "@googletest//:gtest",
    ],
)
