package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "async_wait",
    srcs = ["async_wait.cc"],
    hdrs = ["async_wait.h"],
    deps = [
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:str_format",
        "@boost.asio//:boost.asio",
    ],
)

cc_library(
    name = "shared_ptr_pipe",
    hdrs = ["shared_ptr_pipe.h"],
    deps = [
        "//rpc/common:shared_ptr_pipe_base",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@boost.asio//:boost.asio",
    ],
)
